GP-1545: De-guava the Debugger